Fixing accessibility bugs (#2015)
* BUG 3040 link not accessibility

* BUG 3147 link not accessible

* BUG3171 COPY button not accessible

* BUG 3038 Genie bar focus not visible

* BUG 3050 color contrast ratio

* BUG 3070 search bar not escape and focusing issue

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.scss
@@ -92,6 +92,10 @@
     background-color: #f3f2f1;
   }
 
+  .collapsible-button:focus {
+    outline: 2px dashed #0065B3;
+  }
+
   .collapsible-button {
     outline-style: dashed;
     outline-width: 1px;
